Fix sponsor layout on small screens

--- a/app/assets/stylesheets/sitewide/_footer.scss
+++ b/app/assets/stylesheets/sitewide/_footer.scss
@@ -110,13 +110,17 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin-top: 20px;
     }
 
     .trondheim-kommune-container {
       display: flex;
       flex-direction: row;
       align-items: center;
-      margin-right: 50px;
+      margin-right: 20px;
+      margin-left: 20px;
     }
 
     .trondheim-kommune-icon {
